# project_invest

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: tests.yml
configs/: config_futures.example.json  pairs_top_crypto.txt  project_config.yaml
data/: README.md
notebooks/: 01_data_exploration.ipynb  02_cointegration_screening.ipynb  03_single_pair_backtest.ipynb  04_walk_forward_analysis.ipynb  05_freqtrade_results_analysis.ipynb
reports/: report.md
results/: backtest_summary.csv  benchmark_comparison.csv  data_availability.csv  equity_curve.csv  freqtrade_lookahead_analysis.txt  multi_pair_summary.csv  pair_screening_results.csv  selected_pairs.csv  trades.csv  walk_forward_results.csv
results/holdout/: backtest_summary_test.csv  benchmark_comparison_test.csv  pair_screening_train.csv  selected_pairs_train.csv  trades_test.csv
results/sensitivity/: sensitivity_results.csv  sensitivity_summary.csv
results/walk_forward_screening/: walk_forward_results.csv  walk_forward_selected_pairs.csv
scripts/: check_data.py  download_data.ps1  download_data.sh  generate_report.py  run_benchmarks.py  run_freqtrade_backtest.sh  run_freqtrade_lookahead_analysis.sh  run_holdout_experiment.py  run_sensitivity_analysis.py  run_single_pair_backtest.py  run_walk_forward.py  run_walk_forward_screening.py  screen_pairs.py
src/pair_trading/: __init__.py  config.py  (+12 more)
tests/: test_backtester.py  test_backtester_capital.py  test_benchmarks.py  test_cointegration.py  test_metrics.py  test_runtime_download.py  test_signals.py  test_spread.py  test_walk_forward.py
(+7 files in other folders)
