[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pair-trading"
version = "0.1.0"
description = "Pair trading research (cointegration, ADF) + Freqtrade layer"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
dependencies = [
  "pandas>=2.0",
  "numpy>=1.26",
  "scipy>=1.11",
  "statsmodels>=0.14",
  "matplotlib>=3.8",
  "plotly>=5.18",
  "scikit-learn>=1.3",
  "typer>=0.12",
  "pydantic>=2.0",
  "pyyaml>=6.0",
  "ccxt>=4.0",
]

[project.optional-dependencies]
freqtrade = ["freqtrade"]
dev = [
  "pytest>=7.0",
  "jupyter>=1.0",
  "ipykernel>=6.0",
  "ruff>=0.4",
  "black>=24.0",
]

# Dev / notebooks — ставятся через `uv sync` (см. [tool.uv] default-groups)
[dependency-groups]
dev = [
  "pytest>=7.0",
  "jupyter>=1.0",
  "ipykernel>=6.0",
  "ruff>=0.4",
  "black>=24.0",
]

[tool.uv]
default-groups = ["dev"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
